--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "browser-history-lite",
-  "version": "0.0.2",
-  "license": "MIT",
-  "description": "History helper for browser",
-  "main": "browser-history-lite.js",
-  "author": "Lauri Rooden <lauri@rooden.ee>",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/litejs/browser-history-lite.git"
-  },
-  "bugs": {
-    "url": "https://github.com/litejs/browser-history-lite/issues"
-  },
-  "keywords": [
-    "browser",
+	"name": "browser-history-lite",
+	"version": "0.0.3",
+	"license": "MIT",
+	"description": "History helper for browser",
+	"main": "browser-history.js",
+	"author": "Lauri Rooden <lauri@rooden.ee>",
+	"repository": {
+		"type": "git",
+		"url": "git://github.com/litejs/browser-history-lite.git"
+	},
+	"bugs": {
+		"url": "https://github.com/litejs/browser-history-lite/issues"
+	},
+	"keywords": [
+		"browser",
 		"history",
-    "litejs"
-  ],
-  "readmeFilename": "README.md"
+		"litejs"
+	],
+	"readmeFilename": "README.md"
 }
