--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "browser-history-lite",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "stability": 2,
-  "license": "MIT",
   "author": "Lauri Rooden <lauri@rooden.ee>",
+  "license": "MIT",
   "description": "History helper for browser",
   "keywords": [
     "browser",
@@ -12,6 +12,10 @@
   ],
   "main": "index.js",
   "readmeFilename": "README.md",
+  "files": [
+    "dist",
+    "index.js"
+  ],
   "scripts": {
     "build": "node node_modules/buildman/index.js --all",
     "travis-test": "istanbul cover ./tests/run.js && (coveralls < coverage/lcov.info || exit 0)",
@@ -22,7 +26,7 @@
     "url": "https://github.com/litejs/browser-history-lite/issues"
   },
   "devDependencies": {
-    "buildman": "0.2.20",
+    "buildman": "0.2.28",
     "testman": "0.1.9"
   },
   "buildman": {
