--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "browser-history-lite",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "stability": 2,
   "author": "Lauri Rooden <lauri@rooden.ee>",
   "license": "MIT",
@@ -26,8 +26,8 @@
     "url": "https://github.com/litejs/browser-history-lite/issues"
   },
   "devDependencies": {
-    "buildman": "0.2.28",
-    "testman": "0.1.9"
+    "buildman": "0.2.31",
+    "testman": "0.1.10"
   },
   "buildman": {
     "dist/hash-only.js": {
@@ -38,9 +38,7 @@
     },
     "dist/index-min.js": {
       "banner": "/*! litejs.com/MIT-LICENSE.txt */",
-      "input": [
-        "index.js"
-      ]
+      "input": "index.js"
     }
   }
 }
